Call Reports - Added styling for reports and a couple sample reports

--- a/ruby/rails/callreports/Gemfile
+++ b/ruby/rails/callreports/Gemfile
@@ -31,6 +31,12 @@ gem 'jbuilder', '~> 2.5'
 # gem 'redis', '~> 3.0'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
+# bootstrap
+gem 'bootstrap', '~> 4.0.0.alpha6'
+# sprockets-rails
+gem 'sprockets-rails', '~> 3.2' 
+# auto-prefixer
+gem 'autoprefixer-rails', '~> 6.0.3'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
